[gd_scene load_steps=22 format=2]

[ext_resource path="res://Art/Themes/1.tres" type="Theme" id=2]
[ext_resource path="res://Nodes/Text.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Menu.gd" type="Script" id=4]
[ext_resource path="res://Sounds/03 Before the Dawn.ogg" type="AudioStream" id=5]
[ext_resource path="res://Art/Controls_shoot.png" type="Texture" id=6]
[ext_resource path="res://Art/scroll.png" type="Texture" id=7]
[ext_resource path="res://Art/Font/arcade.tres" type="DynamicFont" id=8]
[ext_resource path="res://Art/Font/arcadesmall.tres" type="DynamicFont" id=9]
[ext_resource path="res://Art/Button.png" type="Texture" id=10]
[ext_resource path="res://Nodes/GunStatCard.tscn" type="PackedScene" id=11]
[ext_resource path="res://Art/scroll_h.png" type="Texture" id=12]
[ext_resource path="res://Nodes/Button.tscn" type="PackedScene" id=13]
[ext_resource path="res://Art/Font/arcadeheader.tres" type="DynamicFont" id=14]
[ext_resource path="res://Nodes/Health_Bar.tscn" type="PackedScene" id=15]
[ext_resource path="res://Art/ability.png" type="Texture" id=16]
[ext_resource path="res://Art/Font/arcadebig.tres" type="DynamicFont" id=17]
[ext_resource path="res://CustomizeCard.tscn" type="PackedScene" id=18]
[ext_resource path="res://Nodes/CompositeSprites.tscn" type="PackedScene" id=19]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.243137 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Animation" id=6]
resource_name = "name bob"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Name:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1e+06, 153893 ),
"update": 0,
"values": [ Vector2( 424, 0 ), Vector2( 424, 8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Control/CompositeSprites")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="Customize" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 479.0
margin_top = 20.0
margin_right = 584.0
margin_bottom = 151.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" parent="." instance=ExtResource( 3 )]
margin_left = 424.0
margin_right = 640.0
rect_min_size = Vector2( 216, 33 )
text = ""

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" parent="Control" instance=ExtResource( 3 )]
margin_left = 113.0
margin_top = 60.0
margin_right = 373.0
margin_bottom = 93.0
text = "Abilities"

[node name="Button" type="Button" parent="Control"]
margin_left = 471.0
margin_top = 250.0
margin_right = 616.0
margin_bottom = 313.0
focus_neighbour_left = NodePath("../Settings")
focus_neighbour_top = NodePath("../Marathon")
theme = ExtResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Marathon" type="Button" parent="Control"]
margin_left = 471.0
margin_top = 164.0
margin_right = 617.0
margin_bottom = 227.0
focus_neighbour_bottom = NodePath("../Button")
theme = ExtResource( 2 )
text = "Marathon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Control"]
margin_left = 262.0
margin_top = 250.0
margin_right = 429.0
margin_bottom = 313.0
focus_neighbour_left = NodePath("../Guns")
focus_neighbour_right = NodePath("../Button")
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Guns" type="Button" parent="Control"]
margin_left = 24.0
margin_top = 250.0
margin_right = 222.0
margin_bottom = 313.0
rect_min_size = Vector2( 198, 63 )
focus_neighbour_right = NodePath("../Settings")
text = "Terminate"
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Abilities" type="HBoxContainer" parent="Control"]
margin_left = 24.0
margin_top = 82.0
margin_right = 428.0
margin_bottom = 215.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilTex" type="TextureRect" parent="Control/Abilities"]
margin_right = 404.0
margin_bottom = 133.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 16 )
expand = true
stretch_mode = 5

[node name="Speed" parent="Control/Abilities/AbilTex" instance=ExtResource( 3 )]
margin_left = 40.0
margin_top = 51.0
margin_right = 112.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 17 )
text = "1"

[node name="ReloadTime" parent="Control/Abilities/AbilTex" instance=ExtResource( 3 )]
margin_left = 177.0
margin_top = 43.0
margin_right = 249.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 17 )
text = "1"

[node name="Xp" parent="Control" instance=ExtResource( 3 )]
margin_left = 23.0
margin_top = 9.0
margin_right = 59.0
margin_bottom = 42.0
text = "Xp"

[node name="Xp_bar" parent="Control/Xp" instance=ExtResource( 15 )]
margin_left = 47.0
margin_top = 3.0
margin_right = 47.0
margin_bottom = 3.0
rect_scale = Vector2( 7, 7 )
healthy_color = Color( 0.266667, 0.6, 0.992157, 1 )
caution_color = Color( 0.266667, 0.6, 0.992157, 1 )
danger_color = Color( 0.266667, 0.6, 0.992157, 1 )
caution_zone = 0.0
danger_zone = 0.0

[node name="CustomizeCard" parent="Control" instance=ExtResource( 18 )]
visible = false

[node name="CompositeSprites" parent="Control" instance=ExtResource( 19 )]
position = Vector2( 534, 74 )
scale = Vector2( 8, 8 )

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
margin_left = -1.0
margin_top = -3.0
margin_right = 639.0
margin_bottom = 351.0
color = Color( 0, 0, 0, 0.72549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/ColorRect"]
margin_left = 382.0
margin_top = 17.0
margin_right = 628.0
margin_bottom = 341.0
texture = ExtResource( 7 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Control/ColorRect/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -127.0
margin_right = 89.0
margin_bottom = 127.0
mouse_filter = 1
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect/TextureRect/ScrollContainer"]
margin_right = 184.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" type="Button" parent="Control/ColorRect/TextureRect/ScrollContainer/VBoxContainer"]
margin_right = 184.0
margin_bottom = 33.0
focus_neighbour_left = NodePath("../../../../../Guns")
mouse_filter = 1
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Back"

[node name="SettingsCard" type="ColorRect" parent="Control"]
visible = false
margin_left = -1.0
margin_top = -3.0
margin_right = 639.0
margin_bottom = 351.0
color = Color( 0, 0, 0, 0.72549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/SettingsCard"]
margin_left = 111.0
margin_top = 18.0
margin_right = 530.0
margin_bottom = 334.0
texture = ExtResource( 12 )
stretch_mode = 5
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="Control/SettingsCard"]
margin_left = 142.0
margin_top = 48.0
margin_right = 211.0
margin_bottom = 82.0
focus_neighbour_right = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Options")
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/SettingsCard/Back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 9 )
text = "Back"
align = 1
valign = 1

[node name="Options" type="GridContainer" parent="Control/SettingsCard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = -72.0
margin_right = 127.0
margin_bottom = 101.0
custom_constants/hseparation = 23
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fps" parent="Control/SettingsCard/Options" instance=ExtResource( 13 )]
margin_right = 235.0
margin_bottom = 55.0
label = "Fps"
font = ExtResource( 14 )

[node name="FpsV" type="Label" parent="Control/SettingsCard/Options"]
margin_left = 258.0
margin_top = 17.0
margin_right = 291.0
margin_bottom = 38.0
size_flags_horizontal = 5
custom_fonts/font = ExtResource( 14 )
text = "Off"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" parent="Control/SettingsCard/Options" instance=ExtResource( 13 )]
margin_top = 59.0
margin_right = 235.0
margin_bottom = 114.0
label = "Sound"
font = ExtResource( 14 )

[node name="SoundV" type="Label" parent="Control/SettingsCard/Options"]
margin_left = 258.0
margin_top = 76.0
margin_right = 291.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 14 )
text = "off"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSync" parent="Control/SettingsCard/Options" instance=ExtResource( 13 )]
margin_top = 118.0
margin_right = 235.0
margin_bottom = 173.0
label = "VSync"
font = ExtResource( 14 )

[node name="VSyncV" type="Label" parent="Control/SettingsCard/Options"]
margin_left = 258.0
margin_top = 135.0
margin_right = 291.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 14 )
text = "off"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunStatCard" parent="Control" instance=ExtResource( 11 )]
visible = false
margin_left = 111.0
margin_top = 14.0
margin_right = 530.0
margin_bottom = 337.0

[node name="name_enter" type="ColorRect" parent="Control"]
visible = false
margin_right = 641.0
margin_bottom = 355.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0.72549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/name_enter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.5
margin_top = -177.5
margin_right = 134.5
margin_bottom = 177.5
texture = ExtResource( 7 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/name_enter/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -157.0
margin_top = 60.0
margin_right = 157.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 8 )
text = "Enter your 
nickname"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="Control/name_enter/TextureRect"]
margin_left = 22.0
margin_top = 193.0
margin_right = 243.0
margin_bottom = 226.0
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = SubResource( 5 )
align = 1
max_length = 12
placeholder_text = "Enter here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "name bob"
"anims/name bob" = SubResource( 6 )

[connection signal="pressed" from="Customize" to="." method="_on_Customize_pressed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Marathon" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Control/Guns" to="." method="_on_Guns_pressed"]
[connection signal="back" from="Control/CustomizeCard" to="." method="_on_CustomizeCard_back"]
[connection signal="gui_input" from="Control/ColorRect/TextureRect/ScrollContainer/VBoxContainer/Back" to="." method="_on_Back_gui_input"]
[connection signal="pressed" from="Control/SettingsCard/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Control/SettingsCard/Options/Fps" to="." method="_on_settingV_pressed" binds= [ "fps" ]]
[connection signal="pressed" from="Control/SettingsCard/Options/Sound" to="." method="_on_settingV_pressed" binds= [ "sound" ]]
[connection signal="pressed" from="Control/SettingsCard/Options/VSync" to="." method="_on_settingV_pressed" binds= [ "vsync" ]]
[connection signal="text_entered" from="Control/name_enter/TextureRect/LineEdit" to="." method="_on_LineEdit_text_entered"]
